--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 amqp==5.2.0
+anyio==4.3.0
 asgiref==3.7.2
 async-timeout==4.0.3
 billiard==4.2.0
 blinker==1.7.0
 celery==5.3.6
+certifi==2024.2.2
 click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -15,7 +17,12 @@ django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-timezone-field==6.1.0
 dramatiq==1.16.0
+exceptiongroup==1.2.0
 Flask==3.0.2
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -30,6 +37,7 @@ python-dateutil==2.8.2
 pytz==2024.1
 redis==5.0.1
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2023.4
